WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169604
Fix uninitialized public members in WebProcess
https://bugs.webkit.org/show_bug.cgi?id=169604
Summary
Fix uninitialized public members in WebProcess
Tomas Popela
Reported
2017-03-14 07:46:50 PDT
Found by Coverity scan.
Attachments
Patch
(26.45 KB, patch)
2017-03-14 07:48 PDT
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
Patch
(3.90 KB, patch)
2017-03-15 06:52 PDT
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
Patch
(4.38 KB, patch)
2017-03-17 00:23 PDT
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tomas Popela
Comment 1
2017-03-14 07:48:40 PDT
Created
attachment 304379
[details]
Patch
WebKit Commit Bot
Comment 2
2017-03-14 07:50:39 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Michael Catanzaro
Comment 3
2017-03-14 08:09:28 PDT
Comment on
attachment 304379
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=304379&action=review
Looks good, but the changelog entry is broken!
> Source/WebKit2/UIProcess/API/gtk/WebKitWebViewBase.cpp:171 > + GtkWidget* inspectorView { nullptr};
Missing a space here.
David Kilzer (:ddkilzer)
Comment 4
2017-03-15 05:51:56 PDT
Comment on
attachment 304379
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=304379&action=review
> Source/WebKit2/NetworkProcess/NetworkProcessCreationParameters.h:102 > + HTTPCookieAcceptPolicy cookieAcceptPolicy { 0 };
This would read better as an enum value than an int.
Tomas Popela
Comment 5
2017-03-15 06:52:51 PDT
Created
attachment 304496
[details]
Patch Correct the patch (after I previously had some problems with webkit-patch).
Michael Catanzaro
Comment 6
2017-03-15 08:34:00 PDT
(In reply to
comment #5
)
> Created
attachment 304496
[details]
> Patch > > Correct the patch (after I previously had some problems with webkit-patch).
Did you want to mark it for review?
Alex Christensen
Comment 7
2017-03-16 09:22:00 PDT
Comment on
attachment 304496
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=304496&action=review
r=me
> Source/WebKit2/NetworkProcess/NetworkProcessCreationParameters.h:103 > + bool ignoreTLSErrors { true };
You might want to make the default value of this to be false to be safer unless someone explicitly says they want to ignore tls errors.
Michael Catanzaro
Comment 8
2017-03-16 20:22:15 PDT
Yeah, please make that false... if it breaks something, let's specify it when constructed instead. I assume that it's already explicitly specified everywhere anyway...?
Tomas Popela
Comment 9
2017-03-17 00:19:23 PDT
Sorry guys, but this patch was intended for
bug 169598
as this bug is about WebProcess. (In reply to
comment #7
)
> > Source/WebKit2/NetworkProcess/NetworkProcessCreationParameters.h:103 > > + bool ignoreTLSErrors { true }; > > You might want to make the default value of this to be false to be safer > unless someone explicitly says they want to ignore tls errors.
Yes, this makes sense, thanks!
Tomas Popela
Comment 10
2017-03-17 00:23:27 PDT
Created
attachment 304762
[details]
Patch Finally a patch for the WebProcess..
Tomas Popela
Comment 11
2017-03-17 06:13:10 PDT
Comment on
attachment 304762
[details]
Patch Clearing flags on attachment: 304762 Committed
r214104
: <
http://trac.webkit.org/changeset/214104
>
Tomas Popela
Comment 12
2017-03-17 06:13:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug