Fix uninitialized public members in WebProcess https://bugs.webkit.org/show_bug.cgi?id=169604

Reviewed by Michael Catanzaro.

Found by Coverity scan.

* WebProcess/Databases/IndexedDB/WebIDBConnectionToServer.h:
* WebProcess/InjectedBundle/InjectedBundleNavigationAction.h:
* WebProcess/Plugins/Netscape/NetscapePlugin.h:
* WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp:
(WebKit::NetscapePluginX11::NetscapePluginX11):

Canonical link: https://commits.webkit.org/186765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214104 268f45cc-cd09-0410-ab3c-d52691b4dbfc