Source/WebKit2/WebProcess/Plugins/Netscape/NetscapePlugin.h
@@ -344,8 +344,8 @@ private:
     TimerMap m_timers;
     unsigned m_nextTimerID;
 
-    bool m_privateBrowsingState;
-    bool m_storageBlockingState;
+    bool m_privateBrowsingState { false };
+    bool m_storageBlockingState { false };
 
 #if PLUGIN_ARCHITECTURE(MAC)
     NPDrawingModel m_drawingModel;
