Source/WebKit2/WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp
@@ -166,6 +166,7 @@ NetscapePluginX11::NetscapePluginX11(NetscapePlugin& plugin, Display* display)
     Visual* visual = visualInfo.get()[0].visual;
     ASSERT(visual);
 
+    m_setWindowCallbackStruct.type = NP_SETWINDOW;
     m_setWindowCallbackStruct.visual = visual;
     m_setWindowCallbackStruct.colormap = XCreateColormap(hostDisplay, rootWindowID(), visual, AllocNone);
 }
@@ -195,6 +196,7 @@ NetscapePluginX11::NetscapePluginX11(NetscapePlugin& plugin, Display* display, u
     Display* hostDisplay = x11HostDisplay();
     m_npWindowID = gtk_socket_get_id(GTK_SOCKET(socket));
     GdkWindow* window = gtk_widget_get_window(socket);
+    m_setWindowCallbackStruct.type = NP_SETWINDOW;
     m_setWindowCallbackStruct.display = GDK_WINDOW_XDISPLAY(window);
     m_setWindowCallbackStruct.visual = GDK_VISUAL_XVISUAL(gdk_window_get_visual(window));
     m_setWindowCallbackStruct.depth = gdk_visual_get_depth(gdk_window_get_visual(window));
